fix(abc:se): fix misplaced labels on small screens
- close https://github.com/ng-alain/ng-alain/issues/1448

--- a/packages/abc/edit/style/index.less
+++ b/packages/abc/edit/style/index.less
@@ -145,6 +145,15 @@
     &__horizontal {
       @{se-prefix}__item {
         display: block;
+
+        .@{ant-prefix}-form-item-label {
+          width: 100% !important;
+          text-align: left;
+        }
+
+        @{se-prefix}__label {
+          justify-content: normal;
+        }
       }
     }
 
